--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,9 +10,10 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "removeComments": true,
-    "strictNullChecks": false,
     "preserveConstEnums": true,
     "sourceMap": true,
-    "lib": ["es2015", "es2016", "dom"]
+    "lib": ["es2015", "es2016", "dom"],
+    "alwaysStrict": true,
+    "strictNullChecks": true
   }
 }
